--- a/style.css
+++ b/style.css
@@ -47,10 +47,10 @@ div {
     background: gold;
 }
 img {
-    width: 100%;
+    width: 300px;
 }
 .nagyit {
-    width: 200%;
+    width: 100%;
 }
 
 div.tarolo {
